--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   api:
@@ -9,7 +9,7 @@ services:
       - ./src:/app
       - demo-dev-static-data:/vol/web
     ports:
-      - "8000:8000"
+      - "80:8000"
     env_file:
       - ./.env
     depends_on:
@@ -34,5 +34,5 @@ volumes:
   demo-dev-db:
 
 networks:
-    demo:
-      driver: bridge
+  demo:
+    driver: bridge
