--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ POSTGRES_DB=demo_db
 POSTGRES_PASSWORD=PASSWORD
 POSTGRES_HOST=db
 POSTGRES_USER=postgres
+POSTGRES_PORT=5432
 
 LOG_LEVEL=info
 HTTP_PORT=:8000
